<resources>
    <string name="app_name">mobilalkfejl-kotprog</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="default_web_client_id">22</string>
    <string name="address">Address</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>